@@ -1,3 +1,15 @@
+** v4.53, xx.08.2020**
+* Added Holographic Digitalization to the LocPanel Hearthstones
+* Updated the logo for my SplashScreen
+* Don't hide some textures from the ObjectiveTracker
+* Changed my AFK screen
+* Added an option to adjust the Style Panel Width
+* Take account to the ElvUI Healprediction changes
+* Adjust the frame strata for my right Chat Datatext
+* Added a new font "Gotham Narrow Ultra"
+* Some code cleanup and misc changes
+
+
 ** v4.52, 16.07.2020**
 * Take account for the new Aura Color Option from ElvUI.
 * Don't force settings anymore if you enable the rectangle Minimap.
