@@ -16,10 +16,15 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Take account for the new Aura Color Option from ElvUI",
-		"• Don't force settings anymore if you enable the rectangle Minimap",
-		"• Fix AzeriteTooltip Icons to display correct now",
-		"• Code cleanup",
+		"• Added Holographic Digitalization to the LocPanel Hearthstones",
+		"• Updated the logo for my SplashScreen",
+		"• Don't hide some textures from the ObjectiveTracker",
+		"• Changed my AFK screen",
+		"• Added an option to adjust the Style Panel Width",
+		"• Take account to the ElvUI Healprediction changes",
+		"• Adjust the frame strata for my right Chat Datatext",
+		"• Added a new font Gotham Narrow Ultra",
+		"• Some code cleanup and misc changes",
 
 		-- "• ''",
 	" ",
